# dylib

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  BuildDynLib.cmake  CMakeLists.txt  DyLib.hpp  FindGTest.cmake  LICENSE  README.md  a  dylib.hpp  dylibz.hpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml  unit_tests.yml
cmake/: BuildDynLib.cmake  dylib.cmake  dylibConfig.cmake.in
example/: CMakeLists.txt  README.md  lib.cpp  main.cpp
import/: FetchGoogleTest.cmake
include/: dylib.hpp
packaging/: CMakeConfig.cmake.in  pkgconfig.pc.in
src/: demangle.cpp  dylib.cpp  format.cpp  linux.cpp  mac.cpp  symbols.cpp  unix.cpp  win.cpp
test/: myDynLib.cpp  tests.cpp
tests/: Makefile  lib.cpp  lib.hpp  myDynLib.cpp  tests.cpp
